--- a/.env
+++ b/.env
@@ -1,26 +1,44 @@
-APP_ENV="local"
-APP_KEY=base64:YR+FLHab99rtQSZIScxr1j8yNNPVod6GEMJy8z9ER1Q=
+APP_NAME=Laravel
+APP_ENV=local
+APP_KEY=base64:VqDCd0pyAFGuvsYt+a2Q7EQ6TFfPFLfeibW4zwndopM=
 APP_DEBUG=true
-APP_LOG_LEVEL="debug"
-APP_URL="http://localhost"
+APP_URL=http://localhost
 
-DB_CONNECTION="mysql"
+LOG_CHANNEL=stack
 
-CACHE_DRIVER="file"
-SESSION_DRIVER="file"
-QUEUE_DRIVER="sync"
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=homestead
+DB_USERNAME=homestead
+DB_PASSWORD=secret
 
-REDIS_HOST="127.0.0.1"
+BROADCAST_DRIVER=log
+CACHE_DRIVER=file
+QUEUE_CONNECTION=sync
+SESSION_DRIVER=file
+SESSION_LIFETIME=120
+
+REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_DRIVER="smtp"
-MAIL_HOST="mailtrap.io"
+MAIL_DRIVER=smtp
+MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 
-PUSHER_KEY=
-PUSHER_SECRET=
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_DEFAULT_REGION=us-east-1
+AWS_BUCKET=
+
 PUSHER_APP_ID=
+PUSHER_APP_KEY=
+PUSHER_APP_SECRET=
+PUSHER_APP_CLUSTER=mt1
+
+MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
+MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
