--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
-/vendor
+.DS_Store
+.vscode
+
 /node_modules
+/public/hot
 /public/storage
+/storage/*.key
+/vendor
+.env
+.phpunit.result.cache
+Homestead.json
+Homestead.yaml
+npm-debug.log
+yarn-error.log
